--- a/templates/pages/accueil.html.twig
+++ b/templates/pages/accueil.html.twig
@@ -14,6 +14,7 @@
     <p>
         Voici les <strong>deux dernières formations</strong> ajoutées au catalogue :
         <table class="table">
+            <caption>Table des formations </caption>
             <tr>
                 {% for formation in formations %}
                     <td>
@@ -22,8 +23,8 @@
                                 <!-- emplacement photo -->
                                 {% if formation.picture %}
                                     <a href="{{ path('formations.showone', {id:formation.id}) }}">
-                                    <img src="{{ formation.picture }}" 
-                                         class="card-img-top" style="width:100%;height:auto;">
+                                    <img src="{{ formation.picture }} 
+                                         class="card-img-top" style="width:100%;height:auto;" alt="">
                                     </a>    
                                 {% endif %}
                             </div>
