--- a/templates/pages/playlist.html.twig
+++ b/templates/pages/playlist.html.twig
@@ -10,6 +10,9 @@
                     {{ playlist.name }}&nbsp;
                 {% endfor %}
             <br /><br />
+            <strong>Nombre de formations : </strong><br />
+                {{ playlistformations|length }}
+            <br /><br/>
             <strong>description :</strong><br />
                 {{ playlist.description|nl2br }}
         </div>
