--- a/templates/pages/playlists.html.twig
+++ b/templates/pages/playlists.html.twig
@@ -18,6 +18,13 @@
                     </form>                    
                 </th>
                 <th class="text-left align-top" scope="col">
+                    nombre de formation
+                    <a href="{{ path('playlists.sort', {champ:'nb_formations', ordre:'ASC'}) }}" class="btn btn-info btn-sm active" role="button" aria-pressed="true"><</a>
+                    <a href="{{ path('playlists.sort', {champ:'nb_formations', ordre:'DESC'}) }}" class="btn btn-info btn-sm active" role="button" aria-pressed="true">></a>
+                </th>
+                
+                
+                <th class="text-left align-top" scope="col">
                     catégories
                     <form class="form-inline mt-1" method="POST" action="{{ path('playlists.findallcontain', {champ:'id', table:'categories'}) }}">
                         <select class="form-select form-select-sm" name="recherche" id="recherche" onchange="this.form.submit()">
@@ -47,7 +54,11 @@
                             <h5 class="text-info">
                                 {{ playlists[k].name }}
                             </h5>
-                        </td>                 
+                        </td> 
+                          <td>
+                            {% set nb_formations = playlists[k].formations|length %}
+                            {{ nb_formations }}
+                        </td>
                         <td class="text-left">
                             {% set categories = playlists[k].categoriesplaylist %}
                             {% if categories|length > 0  %}
