--- a/templates/admin/admin.formations.html.twig
+++ b/templates/admin/admin.formations.html.twig
@@ -87,7 +87,9 @@
                     </td>
                     <td>
                         <a href="{{ path('admin.edit.formations', {id:formation.id}) }}" class="btn btn-secondary">Editer</a>
-                        <a href="{{ path('admin.formation.suppr', {id:formation.id}) }}" class="btn btn-danger" onclick="return confirm('Etes-vous sur de vouloir supprimer {{formation.title}} ?')">Supprimer</a>
+                        <a href="{{ path('admin.formation.suppr', {id:formation.id}) }}" class="btn btn-danger" onclick="return confirm('Etes-vous sur de vouloir supprimer {{formation.title}} ?')">
+                           Supprimer
+                        </a>
                     </td>
                 </tr>
         {% endfor %}
