--- a/templates/baseadmin.html.twig
+++ b/templates/baseadmin.html.twig
@@ -13,10 +13,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="">Formations</a>
+                        <a class="nav-link" href="{{ path('admin.formations') }}">Formations</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">Playlists</a>
+                        <a class="nav-link" href="{{ path('admin.playlist') }}">Playlists</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="">Categories</a>
