--- a/templates/baseadmin.html.twig
+++ b/templates/baseadmin.html.twig
@@ -19,7 +19,7 @@
                         <a class="nav-link" href="{{ path('admin.playlist') }}">Playlists</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">Categories</a>
+                        <a class="nav-link" href="{{ path('admin.categorie') }}">Categories</a>
                     </li>                    
                 </ul>
             </div>
