fin de la Mission 3 tache 1 : gérer les tests

--- a/templates/pages/formations.html.twig
+++ b/templates/pages/formations.html.twig
@@ -78,7 +78,7 @@
                     <td class="text-center">
                         {% if formation.miniature %}
                             <a href="{{ path('formations.showone', {id:formation.id}) }}">
-                                <img src="{{ formation.miniature }}" alt="">
+                                <img src="{{ formation.miniature }}" alt="Miniature des videos">
                             </a>
                         {% endif %}
                     </td>
