--- a/templates/pages/accueil.html.twig
+++ b/templates/pages/accueil.html.twig
@@ -23,9 +23,9 @@
                                 <!-- emplacement photo -->
                                 {% if formation.picture %}
                                     <a href="{{ path('formations.showone', {id:formation.id}) }}">
-                                    <img src="{{ formation.picture }} 
-                                         class="card-img-top" style="width:100%;height:auto;" alt="">
-                                    </a>    
+                                    <img alt="Formation photo" src="{{ formation.picture }}" 
+                                         class="card-img-top" style="width:100%;height:auto;">
+                                    </a>     
                                 {% endif %}
                             </div>
                             <div class="col">
